Fix alignment and info

--- a/web/doc/cv/css/style.css
+++ b/web/doc/cv/css/style.css
@@ -361,12 +361,15 @@ address span {
     margin-top: 275px;
     text-align: center;
 }
-
-
     .social-media i {
         font-size: 40px;
         color: #0083BE;
-        margin-right: 100px;
+        margin-right: 25px;
+        margin-left: 25px;
+    }
+
+    .social-media span {
+        font-size: 12px;
     }
 
 h3.clr1 {
